<resources>
    <string name="hello_message">(strings.xml) -> Hello World!</string>
    <string name="app_name">AndroidLabs</string>
    <string name="GoToLoginActivityButtonText">I\'m a button</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="login_title">Login</string>
    <string name="password_title">Password</string>
    <string name="switch_title">Enable Something</string>

    <string name="grid_radio_button">I\'m a radio button</string>
    <string name="grid_checkbox">I\'m a checkbox</string>

    <string name="dialog_message">To Quit, or not to Quit?</string>
    <string name="dialog_title">Would you like to Quit?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="quit_message">ListItemsActivity passed: My information to share</string>

    <!-- In StartActivity -->
    <string name="start_chat_button">Start Chat</string>

    <!-- ChatWindow Layout -->
    <string name="send_button">Send</string>
    <string name="weather_forecast_button">Weather Forecast</string>

    <!-- -->


</resources>
