<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.androidlabs.StartActivity">

    <Button
        android:text="@string/GoToLoginActivityButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:id="@+id/goToLoginActivityButtonId"
        />


    <Button
        android:text="@string/start_chat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goToLoginActivityButtonId"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:id="@+id/start_chat_button"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/weather_forecast_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_chat_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:id="@+id/weather_forecast_button"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
